# prophy

./: .dockerignore  .env.local  .gitignore  CLAUDE.md  PROPHYMANAGER_CLIENT_DETAIL_IMPLEMENTATION_PLAN.md  README.md  docker-compose.dev.db.yml  docker-compose.dev.proxy.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod-local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  wif-test.yml
autenticacao/: authentication.py  serializers.py  urls.py  validations.py  views.py
backend/: .env.example  .gitignore  Dockerfile  conftest.py  flush_and_populate_db.sh  pyproject.toml
backend/autenticacao/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/autenticacao/migrations/: 0001_initial.py  0002_alter_useraccount_options_and_more.py  0003_alter_useraccount_username.py  0004_remove_useraccount_username_useraccount_cpf_and_more.py  0005_alter_useraccount_cpf.py  0006_alter_useraccount_name.py  0007_alter_useraccount_cpf.py  0008_alter_useraccount_is_active_and_more.py  0009_rename_profile_useraccount_role.py
backend/autenticacao/tests/: test_models.py
backend/clients_management/: admin.py  apps.py  file_utils.py  models.py  query_utils.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/clients_management/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_city_alter_unit_user.py  0003_alter_unit_client.py  0003_make_deleted_by_nullable.py  0003_serviceorder_alter_proposal_contract_type_report_and_more.py  0004_alter_report_equipment_alter_report_unit.py  0004_remove_client_status_client_active_alter_client_cnpj.py  0004_remove_serviceorder_activities_and_more.py  0005_add_responsible_prophy_to_service_order.py  0005_alter_client_address_alter_unit_address.py  0005_visit_justification_alter_visit_status.py  0006_alter_client_city_alter_unit_city.py  0006_alter_visit_justification_alter_visit_service_order.py  0006_seed_modalities.py  0007_add_memorial_cdi_us_rm_report_types.py  0007_alter_equipment_equipment_photo_and_more.py  (+7 more)
backend/core/: admin.py  apps.py  asgi.py  middleware.py  pagination.py  settings.py  urls.py  validators.py  views.py
backend/gestao_clientes/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/materials/: apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
backend/requisitions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: e2e-entrypoint.sh  staging-entrypoint.sh
backend/static/: Placeholder.docx
backend/users/: admin.py  apps.py  associations.py  authentication.py  email.py  management.py  models.py  serializers.py  serializers_associations.py  signals.py  urls.py  validators.py  views.py
core/: settings.py  urls.py
docs/: deployment.md
frontend/: .env.example  .env.production  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.cypress  cypress.config.ts  eslint.config.js  eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.storybook/: manager.ts  preview.ts  prophyTheme.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/cypress/: README.md
frontend/src/: App.tsx  main.tsx  routes.tsx  vite-env.d.ts
frontend/stories/: Colors.mdx
frontend/styles/: globals.css
infra/nginx/: app.conf  app.dev.conf  e2e.conf  prod-local.conf
infra/terraform/: .gitignore  apis.tf  artifact_registry.tf  cloud_run_jobs.tf  cloud_scheduler.tf  cloud_sql.tf  iam.tf  monitoring.tf  outputs.tf  secrets.tf  service_accounts.tf  storage.tf  terraform.tfvars  variables.tf  versions.tf  workload_identity.tf
(+489 files in other folders)
