[tool.poetry]
name = "prophy"
version = "0.1.0"
description = "Aplicação Web para atendimentos de clientes no setor da física médica"
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
djangorestframework = "^3.15.2"
Markdown = "^3.6"
django-cors-headers = "^4.4.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.3.0"
pillow = "^10.4.0"
django-stubs = "^5.0.4"
localflavor = "^1.9"
faker = "^28.1.0"
validate-docbr = "^1.10.0"
django-filter = "^24.3"
drf-yasg = "^1.21.7"
setuptools = "^78.1.1"
aiosmtpd = "^1.4.6"
django-ses = "^4.3.0"
mailgun = "^1.1.0"
django-anymail = {extras = ["mailgun"], version = "^13.0.1"}
google-auth = "^2.40.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
